<resources>
    <string name="app_name">PMSU-Projekat</string>
    <string name="btnlogin">LOGIN</string>
    <string name="btn_reply">Reply</string>
    <string name="btn_replytoall">Reply to all</string>
    <string name="btn_forward">Forward</string>
    <string name="tv_from">  From:</string>
    <string name="tv_to">To:</string>
    <string name="hint_compose_email">Compose email</string>
    <string name="hint_subject">Subject</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="foldername">Folder name</string>
    <string name="from">From:</string>
    <string name="switch_account">Switch account</string>

    <string name="title_refresh_time">Refresh time</string>
    <string name="title_sort_by_date">Sort by date</string>
    <string name="list_refresh_time">Refresh time</string>
    <string name="list_refresh_key">list_refresh_key</string>
    <string name="list_sort_by_date">Sort by date</string>
    <string name="list_sort_by_date_key">list_sort_by_date_key</string>
    <string name="cb_refresh_key">cb_refresh_key</string>
    <string name="cb_text">Allow application to refresh automatically, when wifi is available</string>
    <string name="cb_allow_refresh">Allow auto-refresh</string>

    <string name="tv_ime">Name</string>
    <string name="tv_prezime">Last name</string>
    <string name="tv_username">Username</string>
    <string name="tv_password">Password</string>
    <string name="tv_email">Email</string>

    <string name="btn_create_folder">Create folder</string>
    <string name="btn_emails">Emails</string>
    <string name="btn_email">Email</string>
    <string name="btn_create_email">Create Email</string>
    <string name="btn_folder">Folder</string>
    <string name="btn_folders">Folders</string>
    <string name="btn_profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="folders">Folders</string>
    <string name="contacts">Contacts</string>
    <string name="emails">Emails</string>
    <string name="btn_contact">Contact</string>
    <string name="btn_create_contact">Create contact</string>
    <string name="btn_contacts">Contacts</string>
    <string name="btn_create">Create</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_save">Save</string>
    <string name="btn_back">Back</string>
    <string name="btn_cancel">Cancel</string>

    <string name="action_refresh">Refresh</string>
    <string name="filter">Filter</string>
    
    <string name="emails_long">Your emails</string>
    <string name="contacts_long">Your contacts</string>
    <string name="folders_long">Your folders</string>
    <string name="settings_long">Change settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="send">SEND</string>
    <string name="delete">DELETE</string>
    <string name="btn_edit">EDIT</string>
    <string name="save_attachment">Save attachment</string>
    <string name="attachment">Attachment</string>
    <string name="change">Change</string>
    <string name="current_password">Current password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="new_password">New password</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <string name="current_user">current_user</string>
    <string name="current_user_id">current_user_id</string>
    <string name="current_user_username">current_user_username</string>

</resources>
