<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/drawer_mails"
            android:icon="@drawable/ic_mail_black_48dp"
            android:title="@string/emails">
        </item>

        <item android:id="@+id/drawer_contacts"
            android:icon="@drawable/ic_account_box_black_48dp"
            android:title="@string/contacts">
        </item>

        <item android:id="@+id/drawer_folder"
            android:icon="@drawable/ic_folder_open_black_48dp"
            android:title="@string/folders">
        </item>

        <item android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings_applications_black_48dp"
            android:title="@string/settings">
        </item>

        <item android:id="@+id/drawer_logout"
            android:icon="@drawable/ic_logout_white"
            android:title="@string/btn_logout">
        </item>
    </group>
</menu>