<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/sendmail"
        android:title="@string/send"
        android:icon="@drawable/ic_send_white_18dp"
        app:showAsAction="always"
        android:orderInCategory="100"
        />

    <item
        android:id="@+id/attachment"
        android:title="@string/attachment"
        android:icon="@drawable/ic_attach_file_white_18dp"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/cancelmail"
        android:title="@string/btn_cancel"
        android:icon="@drawable/ic_clear_white_18dp"
        app:showAsAction="always"
        android:orderInCategory="200"

        />

</menu>