<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@drawable/gradient_background">


    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        android:hint="@string/hint_username"
        android:drawableLeft="@drawable/ic_account_circle_white_18dp"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="288dp" />


    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/loginUsername"
        app:layout_constraintVertical_bias="0.188"
        tools:layout_editor_absoluteX="0dp"
        android:hint="@string/hint_password"
        android:drawableLeft="@drawable/ic_action_pass"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="93dp"
        android:background="@drawable/btnemails_background"
        android:text="@string/btnlogin"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>