<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/contact_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="15dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_account_circle_black_48dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/ime"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/tv_ime"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_below="@id/contact_icon"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/tv_unesi_ime"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:layout_alignBottom="@id/ime"
        android:layout_toEndOf="@id/ime"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:id="@+id/prezime"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/tv_prezime"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_below="@id/ime"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/tv_unesi_prezime"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:layout_below="@id/tv_unesi_ime"
        android:layout_toEndOf="@id/prezime"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/tv_email"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_below="@id/prezime"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/tv_unesi_email"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:layout_below="@id/tv_unesi_prezime"
        android:layout_toEndOf="@id/tv_email"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"/>



</RelativeLayout>